# utps-traffic-simulation

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  Makefile  README.md  docker-compose.share.yml  docker-compose.yml  pyproject.toml  requirements.txt
configs/: README.md  example.yaml  heatmap_test.yaml  v4_default.yaml  v4_evening_rush.yaml  v4_full_day.yaml  v4_morning_rush.yaml  v4_snapshots.yaml  v4_test.yaml  v4_with_heatmap.yaml
docs/: DOCKER_SETUP.md  LOGGING_SETUP.md  MIGRATION.md  NETWORK_CACHING.md  QUICK_REFERENCE.md  SCRIPTS.md  STREAMLIT_GUI.md  mkdocs.yml
docs/docs/: index.md
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst  usage.rst  userguide.rst
notebooks/: explore_parquets.ipynb
references/: Nextcloud_Link.txt
scripts/: pipeline_gui.py
scripts/filtering/: preprocess_events_xml_001.py  sort_xml_by_person.py  sort_xml_by_time.py  spatial_filtering_events_xml_003.py  time_and_spatial_filter_events_001.py  time_filter_events_011.py
scripts/network_tools/: get_link_length.py
scripts/post_processing/: find_trips_in_geojson.py  merge_geojson.py  sort_geojson_001.py  sort_geojson_002.py
traffic_sim_module/: __init__.py  config.py
traffic_sim_module/io/: gpkg_reader.py  xml_reader.py
traffic_sim_module/pipeline/: main_pipeline.py  parquet_to_animation.py  parquet_to_heatmap.py  xml_to_parquet.py
traffic_sim_module/pipelines/: main_pipeline.py  parquet_to_geojson.py  xml_to_parquet.py
traffic_sim_module/processing/: geometry.py  interpolation.py  transforms.py
traffic_sim_module/utils/: logger.py  (+1 more)
(+18 files in other folders)
